# blueprint-compiler

./: .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  CONTRIBUTING.md  MAINTENANCE.md  NEWS.md  README.md  blueprint-compiler.py  gtk-blueprint-tool.pc  gtk-blueprint-tool.pc.in  gtk-blueprint-tool.py  justfile  linter.blp  meson.build  meson_options.txt  pyproject.toml  setup.py
blueprintcompiler/: annotations.py  ast.py  ast_utils.py  completions.py  completions_utils.py  decompiler.py  errors.py  formatter.py  gir.py  interactive_port.py  linter.py  lsp.py  lsp_utils.py  main.py  parse_tree.py  parser.py  parser_utils.py  tokenizer.py  typelib.py  types.py  utils.py  xml_emitter.py  xml_reader.py
blueprintcompiler/extensions/: __init__.py  gtk_a11y.py  gtk_combo_box_text.py  gtk_file_filter.py  gtk_layout.py  gtk_menu.py  gtk_size_group.py  gtk_string_list.py  gtk_styles.py
blueprintcompiler/language/: __init__.py  adw_breakpoint.py  adw_message_dialog.py  adw_response_dialog.py  attributes.py  binding.py  common.py  contexts.py  expression.py  gobject_object.py  gobject_property.py  gobject_signal.py  gtk_a11y.py  gtk_combo_box_text.py  gtk_dialog.py  gtk_file_filter.py  gtk_layout.py  gtk_level_bar.py  gtk_list_item_factory.py  gtk_menu.py  gtk_scale.py  gtk_size_group.py  gtk_string_list.py  gtk_styles.py  gtkbuilder_child.py  gtkbuilder_template.py  imports.py  lambdas.py  property_binding.py  response_id.py  translated.py  types.py  ui.py  values.py
blueprintcompiler/linter_rules/: __init__.py  avoid_all_caps.py  clamp_scrolledwindow.py  incorrect_widget_placement.py  missing_user_facing_properties.py  no_gtk_switch_state.py  no_visible_true.py  number_of_children.py  order_properties_gtk_adjustment.py  prefer_adw_bin.py  prefer_unicode_chars.py  require_a11y_label.py  translatable_display_string.py  unused_object.py  unused_widgets.py  use_styles_over_css_classes.py  utils.py
blueprintcompiler/outputs/xml/: __init__.py  xml_emitter.py
build-aux/: Dockerfile  install_deps.sh
data/: blueprint-compiler-installed.py.in  blueprint-compiler.py.in  config.py.in
docs/: collect-sections.py  conf.py  examples.rst  flatpak.rst  index.rst  linter.rst  meson.build  packaging.rst  setup.rst  translations.rst
docs/reference/: advanced_expressions.rst  blueprint_x.rst  diagnostics.rst  document_root.rst  expressions.rst  extensions.rst  index.rst  menus.rst  objects.rst  templates.rst  values.rst
gtkblueprinttool/: ast.py  ast_utils.py  completions.py  completions_utils.py  errors.py  gir.py  lsp.py  lsp_enums.py  lsp_utils.py  main.py  parse_tree.py  parser.py  parser_utils.py  pipeline.py  tokenizer.py  utils.py  xml_reader.py
gtkblueprinttool/extensions/: __init__.py  gtk_a11y.py  gtk_combo_box_text.py  gtk_file_filter.py  gtk_layout.py  gtk_menu.py  gtk_size_group.py  gtk_string_list.py  gtk_styles.py
gtkblueprinttool/tests/: test_tokenizer.py
tests/: fuzz.py  test_deprecations.py  test_formatter.py  test_linter.py  test_parser.py  test_samples.py  test_tokenizer.py
tests/formatting/: comment_in.blp  comment_out.blp  correct1.blp  out.blp  string_out.blp
tests/linter_samples/: avoid_all_caps.blp  clamp_scrolledwindow.blp  incorrect_widget_placement.blp  label_with_child.blp  missing_user_facing_properties.blp  number_of_children.blp  prefer_unicode.blp  translatable_display_string.blp  unused_object.blp
tests/sample_errors/: a11y_prop_dne.blp  a11y_prop_obj_dne.blp  a11y_prop_type.blp  a11y_prop_type.err  abstract_class.err  action_parent.blp  action_parent.err  action_response.blp  action_response.err  action_widget_have_no_id.err  action_widget_in_invalid_container.err  action_widget_not_in_dialog.err  assign_inline_menu.blp  assign_inline_menu.err  assign_menu.blp  assign_menu.err  class_dne.err  closure_not_cast.blp  closure_not_cast.err  conflicting_namespaces.blp  conflicting_namespaces.err  deprecations.blp  deprecations.err  empty.err  enable_blpx.blp  enable_blpx.err  expected_semicolon.err  expr_cast_conversion.blp  expr_cast_needed.blp  expr_cast_needed.err  expr_lookup_prop.blp  expr_lookup_prop.err  expr_wrong_type.blp  expr_wrong_type.err  filters_in_non_file_filter.blp  filters_in_non_file_filter.err  incomplete_signal.err  legacy_template.err  level_bar_offset_value.blp  level_bar_offset_value.err  (+26 more)
tests/samples/: .accessibility.blp.swp  accessibility.blp  accessibility.ui  accessibility_dec.blp  accessibility_multiple_labelled_by.blp  action_widgets.blp  action_widgets.ui  actions.blp  actions.ui  adw_alertdialog_responses.blp  adw_alertdialog_responses.ui  adw_breakpoint.blp  adw_breakpoint.ui  bind_settings.blp  bind_settings.ui  binding.blp  binding.ui  blpx_if.blp  blpx_if.ui  blpx_math.blp  blpx_math.ui  blpx_operators.blp  blpx_operators.ui  child_type.blp  child_type.ui  combo_box_text.blp  combo_box_text.ui  comments.ui  enum.ui  expr_closure.blp  expr_closure.ui  expr_closure_args.blp  expr_closure_args.ui  expr_closure_dec.blp  expr_custom_types.blp  expr_custom_types.ui  expr_lookup.blp  expr_lookup.ui  expr_translated.blp  expr_try.blp  (+73 more)
