[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
setup = ['-Dpython_wheel=true']

[project]
name = 'blueprint-compiler'
description = 'Markup compiler for GTK user interface definitions'
version = '0.20.1'
readme = 'README.md'
requires-python = '>=3.9'
license = {file = 'COPYING'}
authors = [
    {name = 'James Westman', email = 'james@jwestman.net'},
]
